--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -204,8 +204,8 @@
 		"Keen Hearing : You can hear twice as far as normal, 50% change to hear concealed things within 30 feet, immune to auditory illusions",
 		"Poor Smell : You can only smell overwhelming odors",
 		"Keen Smell : You can identify famililar things by smell, 50% chance to smell concealed things with a familiar or strong odor within 30 ft, immune to olfactory illusions",
-		"Insomnia : -2 Endurance, fitful sleep, always tired, difficult to surprise while sleeping",
-		"Like a Log : +2 Endurance, able to sleep soundly anywhere under any conditions, very easy to surprise while sleeping",
+		"Insomnia : Fitful sleeper, always tired, difficult to surprise while sleeping",
+		"Like a Log : Sound sleeper able to sleep anywhere under any conditions, very easy to surprise while sleeping",
 		"Belligerent : -2 Leadership, takes offense at any and all criticism",
 		"Born Leader : +2 Leadership, never takes offense",
 		"Weak Mind : Always fails morale and control tests",
