--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -224,6 +224,12 @@
 		"Selfishness Bonus : You can easily inspire Selfishness in others, opponents you target for Selfishness control tests have a +4 Selfishness for the attempt",
 		"Haunted : You are haunted by ghosts",
 		"Medium : You can see and speak to ghosts",
+		"Obsessive Gambler : You will never refuse to bet or game",
+		"Sense of Location: You always know true north and your position relative to previous places)",
+		"Kleptomania : You always steal small things and must succeed in a Greed control test to keep from stealing any small worthless items around you",
+		"Gift of Tongues : You can learn or decipher any written or spoken language or page of inscriptions within a day, you can automatically read and write well, and you can start as a scholar",
+		"Psychopath : You enjoy killing so much that must succeed in a Selfishness control test to keep from killing opponents, captives, or anyone that is helpless",
+		"Healing Hands : Once per day you can heal 1d6 Endurance on a single target you touch",
 		"Persecuted : Something about you causes people to target you for verbal and physical violence, you are usually the go to target for verbal or physical abuse",
 		"Roll again 1d3 times",
 		"Something Abhorrent",
