--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -230,6 +230,8 @@
 		"Gift of Tongues : You can learn or decipher any written or spoken language or page of inscriptions within a day, you can automatically read and write well, and you can start as a scholar",
 		"Psychopath : You enjoy killing so much that must succeed in a Selfishness control test to keep from killing opponents, captives, or anyone that is helpless",
 		"Healing Hands : Once per day you can heal 1d6 Endurance on a single target you touch",
+		"Phobia : Fear of water, heights, spiders, or snakes so you either can't swim or climb, or you are paralyzed with fear or flee in terror from spiders or snakes",
+		"Oracle : As long as you faithfullt serve a god or goddess you have been chosen as one of their oracles, you can answer any questions that prove you speak for your god or goddess, and the god or goddess automatically grants all miracles that further their prophecies",
 		"Persecuted : Something about you causes people to target you for verbal and physical violence, you are usually the go to target for verbal or physical abuse",
 		"Roll again 1d3 times",
 		"Something Abhorrent",
