--- a/JavascriptTests.html
+++ b/JavascriptTests.html
@@ -153,7 +153,7 @@
 		"Talented Climber : +2 to all Climbing checks and you climb well",
 		"Inept Rider : You can't rind any animal, the best you can do is sit on a mount",
 		"Talented Rider:  +2 to all Riding checks and you ride well",
-		"Inept Singer : You can't sing and you can't sing for magical or religious purposes",
+		"Inept Singer : You can't sing at all and not for magical or religious purposes",
 		"Talented Singer : +2 to all Singing checks and you sing well",
 		"Inept Swimmer : You can't swim and begin to drown as soon as you enter water",
 		"Talented Swimmer: +2 to all Swimming checks and you swim well",
