--- a/campaign.html
+++ b/campaign.html
@@ -1,5 +1,23 @@
 <html>
 <head>
+	<title>Fantasy Wargaming SRD</title>
+	<style>
+	table, th, tr, td {
+		vertical-align: top;
+	}
+	.nobility {
+		background-color: #CCFFCC;
+	}
+	.poorfree {
+		background-color: #EEEEEE;
+	}
+	.unfree {
+		background-color: #CCCCCC;
+	}
+	.slave {
+		background-color: #FFCCCC;
+	}
+  </style>
 </head>
 <body>
 </body>
