--- a/campaign.html
+++ b/campaign.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Fantasy Wargaming SRD</title>
+	<title>Fantasy Wargaming - Campaign</title>
 	<style>
 	table, th, tr, td {
 		vertical-align: top;
@@ -20,5 +20,25 @@
   </style>
 </head>
 <body>
+	<h1>The Land Between Two Rivers</h1>
+	<p>
+	</p>
+	
+	<h1>The Gods</h1>
+	<p>
+	</p>
+	
+	<h2>The Patron Deities</h2>
+	<p>
+	</p>
+	
+	<h2>Other Deities</h2>
+	<p>
+	</p>
+	
+	<h1>The Great City States</h1>
+	<p>
+	</p>
+	
 </body>
 </html>
