--- a/campaign.html
+++ b/campaign.html
@@ -1,11 +1,31 @@
 <html>
 <head>
 	<title>Fantasy Wargaming - Campaign</title>
+	<link href="styles/home.css" type="text/css" rel="stylesheet" />
+	<link href="styles/srd.css" type="text/css" rel="stylesheet" />
+	<style>
+    sup {
+        font-size: 8pt;
+    }
+    ul {
+        margin-left:20px;
+    }
+    li {
+        list-style-type: disc;
+    }
+    .nobility td {
+        padding:8px;
+    }
+    .nobility h4 {
+        margin-top:0px;
+    }
+    </style>
 	<style>
 	table, th, tr, td {
 		vertical-align: top;
+		font-size: 10pt;
 	}
-	.nobility {
+	.noble {
 		background-color: #CCFFCC;
 	}
 	.poorfree {
@@ -17,9 +37,11 @@
 	.slave {
 		background-color: #FFCCCC;
 	}
-  </style>
+	</style>
 </head>
-<body>
+<body style="padding-top:80px">
+	<div id="header">
+	</div>
 	<h1>The Land Between Two Rivers</h1>
 	<p>
 	</p>
