--- a/campaign.html
+++ b/campaign.html
@@ -65,31 +65,41 @@
 	<h1>The Code of Laws</h1>
 	<ol>
 		<li>
-			If any one ensnare another, putting a ban upon him, but he can not prove it, then he that ensnared him shall be put to death.
+			If any one seeks and receives a divination from the gods, they must accept the results as law or be put to death.
 		</li>
 		<li>
-			If any one bring an accusation against a man, and the accused go to the river and leap into the river, if he sink in the river his accuser shall take possession of his house. But if the river prove that the accused is not guilty, and he escape unhurt, then he who had brought the accusation shall be put to death, while he who leaped into the river shall take possession of the house that had belonged to his accuser.
+			No practicioner of magics, sorcery, witchcraft, or wizardry shall ever require or accept payment, not of silver or gold, male or female slaves, an ox or a sheep, an ass or anything, or if he take it in charge he is considered a blasphemer of the gods and shall be put to death.
 		</li>
 		<li>
-			If any one bring an accusation of any crime before the elders, and does not prove what he has charged, he shall, if it be a capital offense charged, be put to death.
+			If any one encounters a thief or a known thief they shall put them to death if they are able.
 		</li>
 		<li>
-			If he satisfy the elders to impose a fine of grain or money, he shall receive the fine that the action produces.
+			If any one ensnares another, putting a ban upon him, but he can not prove it, then he that ensnared him shall be put to death.
 		</li>
 		<li>
-			If a judge try a case, reach a decision, and present his judgment in writing; if later error shall appear in his decision, and it be through his own fault, then he shall pay twelve times the fine set by him in the case, and he shall be publicly removed from the judge's bench, and never again shall he sit there to render judgement.
+			If any one brings an accusation against a man, and the accused goes to the temple and sacrifice for and receives a divination, if the divination finds him guilty his accuser shall take possession of his house. 
+			But if the divination prove that the accused is not guilty, then he who had brought the accusation shall be put to death, while he who sought and received the divination shall take possession of the house that had belonged to his accuser.
 		</li>
 		<li>
-			If any one steal the property of a temple or of the court, he shall be put to death, and also the one who receives the stolen thing from him shall be put to death.
+			If any one brings an accusation of any crime before the elders, and does not prove what he has charged, he shall, if it be a capital offense charged, be put to death.
 		</li>
 		<li>
-			If any one buy from the son or the slave of another man, without witnesses or a contract, silver or gold, a male or female slave, an ox or a sheep, an ass or anything, or if he take it in charge, he is considered a thief and shall be put to death.
+			If he satisfies the elders to impose a fine of grain or money, he shall receive the fine that the action produces.
 		</li>
 		<li>
-			If any one steal cattle or sheep, or an ass, or a pig or a goat, if it belong to a god or to the court, the thief shall pay thirtyfold therefor; if they belonged to a freed man of the king he shall pay tenfold; if the thief has nothing with which to pay he shall be put to death.
+			If a judge tries a case, reaches a decision, and presents his judgment in writing; if later error shall appear in his decision, and it be through his own fault, then he shall pay twelve times the fine set by him in the case, and he shall be publicly removed from the judge's bench, and never again shall he sit there to render judgement.
 		</li>
 		<li>
-			If any one lose an article, and find it in the possession of another: if the person in whose possession the thing is found say "A merchant sold it to me, I paid for it before witnesses," and if the owner of the thing say, "I will bring witnesses who know my property," then shall the purchaser bring the merchant who sold it to him, and the witnesses before whom he bought it, and the owner shall bring witnesses who can identify his property. The judge shall examine their testimony--both of the witnesses before whom the price was paid, and of the witnesses who identify the lost article on oath. The merchant is then proved to be a thief and shall be put to death. The owner of the lost article receives his property, and he who bought it receives the money he paid from the estate of the merchant.
+			If any one steals the property of a temple or of the court, he shall be put to death, and also the one who receives the stolen thing from him shall be put to death.
+		</li>
+		<li>
+			If any one buys from the son or the slave of another man, without witnesses or a contract, silver or gold, a male or female slave, an ox or a sheep, an ass or anything, or if he take it in charge, he is considered a thief and shall be put to death.
+		</li>
+		<li>
+			If any one steals cattle or sheep, or an ass, or a pig or a goat, if it belongs to a god or to the court, the thief shall pay thirtyfold therefore; if they belonged to a freed man of the king he shall pay tenfold; if the thief has nothing with which to pay he shall be put to death.
+		</li>
+		<li>
+			If any one loses an article, and finds it in the possession of another: if the person in whose possession the thing is found say "A merchant sold it to me, I paid for it before witnesses," and if the owner of the thing say, "I will bring witnesses who know my property," then shall the purchaser bring the merchant who sold it to him, and the witnesses before whom he bought it, and the owner shall bring witnesses who can identify his property. The judge shall examine their testimony--both of the witnesses before whom the price was paid, and of the witnesses who identify the lost article on oath. The merchant is then proved to be a thief and shall be put to death. The owner of the lost article receives his property, and he who bought it receives the money he paid from the estate of the merchant.
 		</li>
 		<li>
 			If the purchaser does not bring the merchant and the witnesses before whom he bought the article, but its owner bring witnesses who identify it, then the buyer is the thief and shall be put to death, and the owner receives the lost article.
@@ -101,7 +111,7 @@
 			If the witnesses be not at hand, then shall the judge set a limit, at the expiration of six months. If his witnesses have not appeared within the six months, he is an evil-doer, and shall bear the fine of the pending case.
 		</li>
 		<li>
-			If any one steal the minor son of another, he shall be put to death.
+			If any one steal the minor son or daughter of another, he shall be put to death.
 		</li>
 		<li>
 			If any one take a male or female slave of the court, or a male or female slave of a freed man, outside the city gates, he shall be put to death.
@@ -332,7 +342,8 @@
 			If any one deliver silver, gold, or anything else to another for safe keeping, before a witness, but he deny it, he shall be brought before a judge, and all that he has denied he shall pay in full.
 		</li>
 		<li>
-			If any one place his property with another for safe keeping, and there, either through thieves or robbers, his property and the property of the other man be lost, the owner of the house, through whose neglect the loss took place, shall compensate the owner for all that was given to him in charge. But the owner of the house shall try to follow up and recover his property, and take it away from the thief.
+			If any one place his property with another for safe keeping, and there, either through thieves or robbers, his property and the property of the other man be lost, the owner of the house, through whose neglect the loss took place, shall compensate the owner for all that was given to him in charge. 
+			But the owner of the house shall try to follow up and recover his property, and take it away from the thief.
 		</li>
 		<li>
 			If any one who has not lost his goods state that they have been lost, and make false claims: if he claim his goods and amount of injury before God, even though he has not lost them, he shall be fully compensated for all his loss claimed. (I.e., the oath is all that is needed.)
