--- a/campaign.html
+++ b/campaign.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Fantasy Wargaming - Campaign</title>
+	<title>Fantasy Wargaming - Campaign Information</title>
 	<link href="styles/home.css" type="text/css" rel="stylesheet" />
 	<link href="styles/srd.css" type="text/css" rel="stylesheet" />
 	<style>
