--- a/campaign.html
+++ b/campaign.html
@@ -59,9 +59,103 @@
 	</p>
 	
 	<h1>The Great City States</h1>
-	<p>
-	</p>
-	
+		<img src="sumer.gif"/>
+		<br/>
+		<br/>
+		<table style="padding:0px;border-collapse: separate;border-spacing:0px;">
+			<tr>
+				<th>City State</th>
+				<th>Ruler</th>
+				<th>Patron Deity</th>
+				<th>Notes</th>
+			</tr>
+			<tr class="odd">
+				<td>Akkad</td>
+				<td>King Warrior Balathu</td>
+				<td>Anu: god of heaven, the firmament</td>
+				<td></td>
+			</tr>
+			<tr class="even">
+				<td>Ashur</td>
+				<td>Warrior King Kurigalzu</td>
+				<td>Ashur: god of air</td>
+				<td></td>
+			</tr>
+			<tr class="odd">
+				<td>Eridu</td>
+				<td>King Hierophant Kuda</td>
+				<td>Enki: god of freshwater, male fertility, and knowledge</td>
+				<td></td>
+			</tr>
+			<tr class="even">
+				<td>Kish</td>
+				<td>Warrior King Sargon</td>
+				<td>Ninurta: champion of the gods, the epitome of youthful vigour, and god of agriculture, Inanna: wife of Ninurta</td>
+				<td></td>
+			</tr>
+			<tr class="odd">
+				<td>Lagash</td>
+				<td>Warrior King Rihat</td>
+				<td>Ninurta: champion of the gods, the epitome of youthful vigour, and god of agriculture, Inanna: wife of Ninurta</td>
+				<td></td>
+			</tr>
+			<tr class="even">
+				<td>Mari</td>
+				<td>King Hierophant Arshaka</td>
+				<td>Dagon: god of fertility</td>
+				<td></td>
+			</tr>
+			<tr class="odd">
+				<td>Ninevah</td>
+				<td>Queen Hierophant Nina</td>
+				<td>Nanshe: goddess of prophecy, fertility and fish</td>
+				<td></td>
+			</tr>
+			<tr class="even">
+				<td>Nippur</td>
+				<td>Warrior King Sin-Nasir</td>
+				<td>Enlil: god of the air, Ninlil: an air goddess and wife of Enlil; one of the matron deities of Nippur; she was believed to reside in the same temple as Enlil</td>
+				<td></td>
+			</tr>
+			<tr class="odd">
+				<td>Samarra</td>
+				<td>Queen Hierophant Amare</td>
+				<td>Ninhursag: goddess of the earth, fertility</td>
+				<td></td>
+			</tr>
+			<tr class="even">
+				<td>Sippar</td>
+				<td>Sorcereress Queen Xuxa</td>
+				<td>Utu: god of the sun at the E-babbar temple; Ereshkigal: goddess of Irkalla Kur (Sumerian) or Ersetu (Akkadian) - Underworld from which there is no return</td>
+				<td></td>
+			</tr>
+			<tr class="odd">
+				<td>Susa</td>
+				<td>High Sorcerer Elam</td>
+				<td>Nergal: god of plague, war, and the sun in its destructive capacity; later husband of Ereshkigal</td>
+				<td></td>
+			</tr>
+			<tr class="even">
+				<td>Tall Halaf</td>
+				<td>Queen Hierophant Lahamu</td>
+				<td>Nergal: god of plague, war, and the sun in its destructive capacity; later husband of Ereshkigal</td>
+				<td></td>
+			</tr>
+			<tr class="odd">
+				<td>Ur</td>
+				<td>Warrior King Dipatusu</td>
+				<td>Nanna: god of the moon and of wisdom; Ningal: wife of Nanna</td>
+				<td></td>
+			</tr>
+			<tr class="even">
+				<td>Uruk</td>
+				<td>Queen Hierophant Lilith</td>
+				<td>Inanna or Ishtar: goddess of warfare, female fertility, and sexual love</td>
+				<td>Greatest city state</td>
+			</tr>
+		</table>
+		<br/>
+				
 	<h1>The Code of Laws</h1>
 	<ol>
 		<li>
