--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <body style="padding-top:80px">
 <div id="header">
 </div>
-	<h1>Character Creation</h1>
-		<h2>Attributes</h2>
+	<h1 id="characterCreation">Character Creation</h1>
+		<h2 id="attributes">Attributes</h2>
 			<p>
 				Attributes are rolled in the order listed below, using 4d6 and keeping the highest three dice for a range of 3 to 18.
 			</p>
@@ -69,7 +69,7 @@
 			<p>
 				The online random character generator is located <a href="fwcharacter.html">here</a>.
 			</p>
-		<h2>Social Class</h2>
+		<h2 id="socialClass">Social Class</h2>
 			<p>
 				Social class starts at 11.
 			</p>
@@ -274,7 +274,7 @@
 					</td>
 				</tr>
 			</table>
-		<h2>Skills</h2>
+		<h2 id="skills">Skills</h2>
 			<h3>Climbing</h3>
 			<h3>Riding</h3>
 			<h3>Singing</h3>
@@ -282,7 +282,98 @@
 			<h3>Swiming</h3>
 			<h3>Tracking</h3>
 
-	<h1>Combat</h1>
+	<h1 id="turns">Game Turns</h1>
+		<p>
+			A game turn is a term used to describe when the Players and GM take turns controlling the events of the game.
+			This is not the same as a "flurry" in combat or switching actions between PCs and NPCs.
+		</p>
+		<p>
+			GM turns are primarily where the adventuring takes place.
+		</p>
+		<p>
+			Player turns are primarily where rest, recuperation, and between scene actions occur.
+		</p>
+		<h2 id="gmTurn">The Game Master Turn</h2>
+			<p>
+				The GM turn is what most people think of when they think of action occurring during a game.
+				This is the time where the GM describes the environment and NPCs and takes direction or indirect actions to move the story.
+				This is when all combat, role play, and other challenges occur.
+			</p>
+			<p>
+				The GM turn is the actual adventure.
+			</p>
+			<p>
+				During the GM turn each time a PC fails a control test for Anger, Greed, Leadership, Lust, Morale, or Selfishness the will receive an extra free action during the next Player turn.
+				This means that if you provide the GM opportunites to use your character's weaknesses against you, you will benefit from it during the Player turn.
+			</p>
+		<h2 id="playerTurn">The Player Turn</h2>
+			<p>
+				The Player turn is what happens between adventures or even between scenes.
+				This is when players rest, recuperate, check in with contacts, maintain relationships, maintain businesses, etc.
+			</p>
+			<p>
+				Each player start with one free action they can take during their turn.
+				They can use this action to speak with their contacts, romance an NPC, recover from some condition, craft something, earn some silver, or any other action approved by the GM.
+			</p>
+			<p>
+				Free actions can't be used for any type of combat action or check.
+			</p>
+			<p>
+				Spending a free action requires a roll but is usually successful, unless the action is inappropriate for any NPCs involved or too large in scope or monetary value.
+				In the case of a failed roll for a free action, players can't try again during the same turn even if it was a different player that failed.
+				This is because there is limited time to perform actions.
+				For example: Two different players can't attempt to bride or seduce the same NPC at the same time.
+			</p>
+			<p>
+				Examples of successful free actions:
+			</p>
+			<ul>
+				<li>Find someone to use magic or a miracle to heal a lame limb</li>
+				<li>Strengthen your relationship with someone you know (spouse, paramour, mentor, child)</li>
+				<li>Romance that cute priest/priestess (working toward a marrige) at Inanna's temple</li>
+				<li>Romance someone with a much higher Charisma and Appearance or Social Class (long term)</li>
+				<li>Seduce that cute farm worker (one night stand)</li>
+				<li>Earn few silver quarters or a coin for some side work</li>
+				<li>Repair some damaged gear</li>
+				<li>Create a single weapon or piece of armor</li>
+				<li>Get/give some information from/to a contact or just strengthen your relationship</li>
+				<li>Make a new contact</li>
+				<li>Grant a favor</li>
+				<li>Cash in a favor</li>
+				<li>Master a spell</li>
+				<li>Create a new spell</li>
+				<li>Maintain an existing business (farm, loom, bakery)</li>
+				<li>Lay groundwork for a new business (farm, loom, bakery(</li>
+				<li>Go to court for a legal matter</li>
+				<li>Find a rare item from a merchant</li>
+			</ul>
+			<p>
+				Examples of unsuccessful free actions:
+			</p>
+			<ul>
+				<li>Find someone to use magic or a miracle to bring back the dead</li>
+				<li>Seduce a married man/women in a single try</li>
+				<li>Seduce someone with a much higher Charisma and Appearance or Social Class than you in a single try</li>
+				<li>Acquire a large amount of silver coins (finding hidden treasure, grifting, or stealing)</li>
+				<li>Create a new set of weapons and armor for one or more people</li>
+				<li>Master a new ability (this only occurs when you level)</li>
+				<li>Create a new business in a short period of time</li>
+			</ul>
+			<p>
+				Some actions that can't be performed with a single free action during a Player turn might be doable using multiple free actions.
+				For example: You might not be able to get a legal matter fully addressed by just going to court, but you might be able to if you speak to a contact, call in a favor, and seduce a witness.
+			</p>
+			<p>
+				During the GM turn each time a PC fails a control test for Anger, Greed, Leadership, Lust, Morale, or Selfishness the will receive an extra free action during the next Player turn.
+			</p>
+			<p>
+				Players may choose to give one or more of their free actions to another player to use during the Player turn.
+				It might be necessary for the group for one PC to use multiple free actions on the Player turn to do something that benefits the whole party or helps move the story forward.
+				Use of another PCs free actions might constitute the PC giving the free action actually doing the legwork, in which case the PC might want some kind of compensation.
+			</p>
+	
+	
+	<h1 id="combat">Combat</h1>
 	<p>
 		During an adventure two elements usually remain constant, agility and physique.
 		If these are more than required to wield the weapon used in combat they count as <i><b>surplus</b></i> agility and physique.
@@ -295,7 +386,7 @@
 		If it <i>is</i> negative, apply it absolutely.
 		If it is positive, halve it (round up) and apply.
 	</p>
-	<h2>Ranged Weapons</h2>
+	<h2 id="rangedWeapons">Ranged Weapons</h2>
 	<p>
 		Take the character's adventurer level and add surplus agility, if any, and apply the following modifiers.
 	</p>
@@ -374,10 +465,11 @@
 		</tr>
 	</table>
 	<br/>
+	<h2 id="meleeWeapons">Melee Weapons</h2>
+	
+	<h1 id="magic">Magic</h1>
 
-	<h1>Magic</h1>
-
-	<h1>Piety</h1>
+	<h1 id="piety">Piety</h1>
 	<p>
 	A character determines how quickly his Piety score increases (if at all) by observing religious strictures and obeying the wishes of his favored god or goddess. In this setting, observance cannot be assumed. Characters must maintain their observances. The gods are extremely fickle, and even if someone normally offers all of the appropriate forms, failing even once to show the proper respect can cause him to be cursed until he makes amends. Because of this, characters need to roleplay their observances and keep track of their Piety points. The Observances table provides a sample list of actions earning characters Piety points. Many of these actions can be performed only once per day, while others can be done multiple times. The Narrator should also keep track of each character's Piety points to make sure each player's records are accurate.
 	</p>
@@ -385,7 +477,7 @@
 	At the Narrator's discretion, the same observance earns more Piety if performed for every god rather than just for the character's favored god, and other times it is worth less. This depends on the nature of the observance. Libations should be offered to every god, because that shows respect for the entire pantheon. Dedicating a military victory to all the gods is too general; dedicating the conquest to your favored god is more specific and means more because you are showing that your devotions focus upon that deity.
 	</p>
 	
-	<h2>Piety Bands</h2>
+	<h2 id="pietyBands">Piety Bands</h2>
 	<table style="padding:0px;border-collapse: separate;border-spacing:0px;">
 		<caption>Piety Band Table</caption>
 		<tbody>
